fix phone white space bug

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 .btn-size {
-  @apply text-base ring-1 py-2 rounded-3xl tracking-wider sm:px-10 px-10;
+  @apply text-base ring-1 py-2 rounded-3xl tracking-wider sm:px-10 px-9;
 }
 
 .max-wrapper {
